# logo-recognition

./: CMakeLists.txt
include/: LogoRecognizer.h  Segment.h  Utils.h
src/: LogoRecognizer.cpp  Segment.cpp  main.cpp
